First demo ready to go

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   },
   "autoload": {
     "psr-4": {
-      "AtkPubSubDemo\\AtkPubSubDemo\\": "src"
+      "AtkPubSubDemo\\": "src"
     }
   },
   "autoload-dev": {
